--- a/ILEditor/packages.config
+++ b/ILEditor/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="5.0.4" targetFramework="net452" />
+  <package id="DockPanelSuite" version="3.0.4" targetFramework="net461" />
+  <package id="DockPanelSuite.ThemeVS2015" version="3.0.4" targetFramework="net461" />
   <package id="FluentFTP" version="19.1.2" targetFramework="net452" />
 </packages>
