--- a/ILEditor/ILEditor.csproj
+++ b/ILEditor/ILEditor.csproj
@@ -563,6 +563,8 @@
     <None Include="Resources\NewIcons\filedelete.png" />
     <Content Include="Resources\Highlighting\Dark\darkPython.xml" />
     <Content Include="Resources\Highlighting\Light\lightPython.xml" />
+    <None Include="Resources\NewIcons\books.png" />
+    <None Include="Resources\NewIcons\computer.png" />
     <Content Include="worksofbarry_mOq_icon.ico" />
   </ItemGroup>
   <ItemGroup>
