--- a/ILEditor/ILEditor.csproj
+++ b/ILEditor/ILEditor.csproj
@@ -180,6 +180,12 @@
     <Compile Include="Forms\CreateDirectory.Designer.cs">
       <DependentUpon>CreateDirectory.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\IFSManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\IFSManager.Designer.cs">
+      <DependentUpon>IFSManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\LibraryList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -376,11 +382,11 @@
     <Compile Include="UserTools\SpoolListing.Designer.cs">
       <DependentUpon>SpoolListing.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserTools\TreeBrowse.cs">
+    <Compile Include="UserTools\QSYSBrowser.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UserTools\TreeBrowse.Designer.cs">
-      <DependentUpon>TreeBrowse.cs</DependentUpon>
+    <Compile Include="UserTools\QSYSBrowser.Designer.cs">
+      <DependentUpon>QSYSBrowser.cs</DependentUpon>
     </Compile>
     <Compile Include="UserTools\UserToolList.cs">
       <SubType>Form</SubType>
@@ -417,6 +423,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\HostSelect.resx">
       <DependentUpon>HostSelect.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\IFSManager.resx">
+      <DependentUpon>IFSManager.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LibraryList.resx">
       <DependentUpon>LibraryList.cs</DependentUpon>
@@ -518,8 +527,8 @@
     <EmbeddedResource Include="UserTools\SpoolListing.resx">
       <DependentUpon>SpoolListing.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserTools\TreeBrowse.resx">
-      <DependentUpon>TreeBrowse.cs</DependentUpon>
+    <EmbeddedResource Include="UserTools\QSYSBrowser.resx">
+      <DependentUpon>QSYSBrowser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserTools\UserToolList.resx">
       <DependentUpon>UserToolList.cs</DependentUpon>
