--- a/ILEditor/ILEditor.csproj
+++ b/ILEditor/ILEditor.csproj
@@ -610,6 +610,7 @@
     <None Include="Resources\NewIcons\redo.png" />
     <None Include="Resources\NewIcons\divide-mathematical-sign.png" />
     <None Include="Resources\NewIcons\cube.png" />
+    <None Include="Resources\NewIcons\bug.png" />
     <Content Include="worksofbarry_mOq_icon.ico" />
   </ItemGroup>
   <ItemGroup>
