Start of UI for Object Diagram

--- a/ILEditor/packages.config
+++ b/ILEditor/packages.config
@@ -4,4 +4,5 @@
   <package id="DockPanelSuite" version="3.0.4" targetFramework="net461" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.4" targetFramework="net461" />
   <package id="FluentFTP" version="19.1.2" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
 </packages>
