--- a/ILEditor/ILEditor.csproj
+++ b/ILEditor/ILEditor.csproj
@@ -94,6 +94,9 @@
     <Reference Include="ICSharpCode.AvalonEdit, Version=5.0.3.0, Culture=neutral, PublicKeyToken=9cc39be672370310, processorArchitecture=MSIL">
       <HintPath>..\packages\AvalonEdit.5.0.4\lib\Net40\ICSharpCode.AvalonEdit.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -182,6 +185,12 @@
     </Compile>
     <Compile Include="Forms\CreateDirectory.Designer.cs">
       <DependentUpon>CreateDirectory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FindReferences.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FindReferences.Designer.cs">
+      <DependentUpon>FindReferences.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\IFSManager.cs">
       <SubType>Form</SubType>
@@ -434,6 +443,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\CreateStreamFile.resx">
       <DependentUpon>CreateStreamFile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FindReferences.resx">
+      <DependentUpon>FindReferences.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\HostSelect.resx">
       <DependentUpon>HostSelect.cs</DependentUpon>
