--- a/ILEditor/packages.config
+++ b/ILEditor/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="5.0.4" targetFramework="net452" />
+  <package id="cef.redist.x64" version="3.3239.1723" targetFramework="net461" />
+  <package id="cef.redist.x86" version="3.3239.1723" targetFramework="net461" />
+  <package id="CefSharp.Common" version="63.0.3" targetFramework="net461" />
+  <package id="CefSharp.WinForms" version="63.0.3" targetFramework="net461" />
   <package id="DockPanelSuite" version="3.0.4" targetFramework="net461" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.4" targetFramework="net461" />
   <package id="FluentFTP" version="19.1.2" targetFramework="net452" />
