--- a/ILEditor/ILEditor.csproj
+++ b/ILEditor/ILEditor.csproj
@@ -99,6 +99,9 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="rpglint">
+      <HintPath>Resources\rpglint.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -393,6 +396,12 @@
     <Compile Include="UserTools\QSYSBrowser.Designer.cs">
       <DependentUpon>QSYSBrowser.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserTools\CodeTips.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserTools\CodeTips.Designer.cs">
+      <DependentUpon>CodeTips.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserTools\TaskList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -535,6 +544,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserTools\QSYSBrowser.resx">
       <DependentUpon>QSYSBrowser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserTools\CodeTips.resx">
+      <DependentUpon>CodeTips.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserTools\TaskList.resx">
       <DependentUpon>TaskList.cs</DependentUpon>
